# Medical_Robot

./: Readme.md  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  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.pub
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/car_driver/: RealCMD.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/mbf_msgs/: CheckPathResponse.h  CheckPoseResponse.h
devel/include/srvbg/: bed_recog.h  bed_recogRequest.h  bed_recogResponse.h  face_recog.h  face_recogRequest.h  face_recogResponse.h  nav_goal.h  nav_goalRequest.h  nav_goalResponse.h  people_id_lan.h  people_id_lanRequest.h  people_id_lanResponse.h  people_id_ui.h  people_id_uiRequest.h  people_id_uiResponse.h  recept_start.h  recept_startRequest.h  recept_startResponse.h  visite_start.h  visite_startRequest.h  visite_startResponse.h
devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
devel/include/xj_robot_pnc/: exe_path.h  exe_pathRequest.h  exe_pathResponse.h  nav_goal.h  nav_goalRequest.h  nav_goalResponse.h  record_start.h  record_startRequest.h  record_startResponse.h  record_stop.h  (+5 more)
param/: stop_pos.txt
src/nav_node/: .gitignore  readme.md
src/srvbg/: CMakeLists.txt
src/srvbg/srv/: bed_recog.srv  face_recog.srv  information.txt  people_id_lan.srv  people_id_ui.srv  recept_start.srv  visite_start.srv
src/visite_node/: CMakeLists.txt
src/visite_node/include/: visite_node.hpp
src/visite_node/src/: main.cpp  visite_node.cpp
(+272 files in other folders)
